# SiriusEngine

./: .gitignore  Baseline.props  Baseline.ruleset  CMakeLists.txt  README.md  Sirius.sln  TODOS.txt  resource.h
ConsoleSandbox/: ConsoleSandbox.vcxproj  Main.cpp
Core/: CMakeLists.txt  Core.cpp  Core.vcxproj
Core/Graphics/: Graphics.cpp  Graphics.h
Core/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Core/System/: App.cpp  DxgiInfoManager.cpp  DxgiInfoManager.h  Window.cpp  Window.h
Core/Util/: SiriusException.h
Shaders/: CMakeLists.txt  PixelShader.hlsl  VertexShader.hlsl
WindowApp/: CMakeLists.txt  WinMain.cpp  Window.cpp  Window.h  WindowApp.vcxproj
debugging/: mangled uniform buffer.csv  mangled.rdc  non-mangled uniform buffer.csv  non-mangled.rdc
src/: CMakeLists.txt  sirius.rc
src/Core/: App.cpp  App.h  CMakeLists.txt  DxgiInfoManager.cpp  Entrypoint_Engine.cpp  Entrypoint_Engine.h  GDIPlusManager.cpp  Game.cpp  Game.h  GraphicsThrowMacros.h  SiriusException.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h  WindowsThrowMacros.h  WndProc.h
src/Game/: App.cpp  App.h  CMakeLists.txt  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h
src/Graphics/: Bindable.cpp  Bindable.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  ConstantBuffer.h  Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  DrawableBase.h  GfxDevice.h  GfxDevice_D3D11.cpp  GfxDevice_Win32.cpp  Graphics.cpp  Graphics.h  GraphicsThrowMacros.h  IndexBuffer.cpp  IndexBuffer.h  IndexedTriangleList.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  Plane.cpp  Plane.h  Sampler.cpp  Sampler.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCBuf.cpp  TransformCBuf.h  VertexBuffer.h  VertexShader.cpp  (+1 more)
src/Input/: CMakeLists.txt  Mouse.h
src/Main/: CMakeLists.txt  GameWorld.cpp  GameWorld.h  Main.cpp
src/Physics/: CMakeLists.txt  Physics.cpp  Physics.h
src/Pong/: CMakeLists.txt  Pong.cpp  Pong.h
src/Shaders/: CMakeLists.txt  PixelShader.hlsl  TexturePS.hlsl  VertexShader.hlsl
src/Sirius/: CMakeLists.txt
src/Sirius/Core/: App.cpp  CMakeLists.txt  Component.h  DxgiInfoManager.cpp  Entrypoint_Engine.cpp  Entrypoint_Engine.h  Fsm.cpp  Fsm.h  GDIPlusManager.h  Model.cpp  Model.h  Timer.cpp  WindowsThrowMacros.h  dxerr.h
src/Sirius/Graphics/: Bindable.h  Buffer.cpp  Buffer.h  Buffer_D3D11.cpp  Buffer_D3D11.h  CMakeLists.txt  Camera.cpp  Camera.h  ConstantBuffer.h  Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  GfxDevice.h  GfxDevice_D3D11.cpp  GfxDevice_Win32.cpp  ImguiManager.cpp  ImguiManager.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.h  InputLayout_D3D11.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PipelineState.h  PipelineState_D3D11.cpp  PipelineState_D3D11.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  RenderApi.cpp  RenderApi.h  RenderApi_D3D11.cpp  RenderApi_D3D11.h  Renderer.cpp  (+17 more)
src/Sirius/Graphics/D3D11/: Buffer_D3D11.cpp  Buffer_D3D11.h  InputLayout_D3D11.cpp  InputLayout_D3D11.h  PipelineState_D3D11.cpp  PipelineState_D3D11.h  RenderApi_D3D11.cpp  RenderApi_D3D11.h  Shader_D3D11.h
src/Sirius/Graphics/Vulkan/: Buffer_Vulkan.cpp  Buffer_Vulkan.h  PipelineState_Vulkan.cpp  PipelineState_Vulkan.h  RenderApi_Vulkan.cpp  RenderApi_Vulkan.h  Shader_Vulkan.cpp  Shader_Vulkan.h  test.cpp  test.h
src/Sirius/Input/: CMakeLists.txt  Input.cpp  Input.h  Keyboard.h  Mouse.cpp  Mouse.h
src/Sirius/Physics/: Physics.cpp  Physics.h
src/Sirius/Shaders/: CMakeLists.txt  PhongPS.hlsl  PhongVS.hlsl  PixelShader.hlsl  SolidPS.hlsl  TextureVS.hlsl  VertexShader.hlsl
src/WindowApp/: CMakeLists.txt  WinMain.cpp
