add_library(Core
        App.cpp
        App.h
        dxerr.cpp
        dxerr.h
        DXGetErrorDescription.inl
        DXGetErrorString.inl
        DxgiInfoManager.cpp
        DxgiInfoManager.h
        DXTrace.inl
        SiriusException.cpp
        SiriusException.h
        Timer.cpp
        Timer.h
        Window.cpp
        Window.h
        WindowsThrowMacros.h
)
target_link_libraries(Core PRIVATE d3d11.lib dxguid.lib D3DCompiler.lib)
