add_library(Graphics STATIC
        Bindable.cpp
        Bindable.h
        ConstantBuffer.h
        Cube.cpp
        Cube.h
        Drawable.cpp
        Drawable.h
        DrawableBase.h
        Graphics.cpp
        Graphics.h
        GraphicsThrowMacros.h
        IndexBuffer.cpp
        IndexBuffer.h
        InputLayout.cpp
        InputLayout.h
        PixelShader.cpp
        PixelShader.h
        Plane.cpp
        Plane.h
        Sampler.cpp
        Sampler.h
        Surface.cpp
        Surface.h
        Texture.cpp
        Texture.h
        Topology.cpp
        Topology.h
        TransformCBuf.cpp
        TransformCBuf.h
        VertexBuffer.h
        VertexShader.cpp
        VertexShader.h
)