add_library(Graphics STATIC
        Camera.cpp
        Camera.h
        ConstantBuffer.h
        Cube.cpp
        Cube.h
        GfxDevice.h
        GfxDevice_Win32.cpp
        Drawable.cpp
        Drawable.h
        DrawableBase.h
        ImguiManager.cpp
        ImguiManager.h
        IndexBuffer.cpp
        IndexBuffer.h
        InputLayout.h
        PixelShader.cpp
        PixelShader.h
        Plane.cpp
        Plane.h
        Sampler.cpp
        Sampler.h
        Surface.cpp
        Surface.h
        Texture.cpp
        Texture.h
        Topology.cpp
        Topology.h
        VertexBuffer.h
        VertexShader.cpp
        VertexShader.h
        WndProc.h
        PointLight.cpp
        PointLight.h
        Sphere.cpp
        Sphere.h
        RenderApi.h
        RenderApi_D3D11.cpp
        RenderApi_D3D11.h
        Renderer.cpp
        Renderer.h
        RenderApi.cpp
        Buffer.h
        Buffer_D3D11.cpp
        Buffer_D3D11.h
        Mesh.cpp
        Mesh.h
        Material.cpp
        Material.h
        Transform.cpp
        Transform.h
        Model.cpp
        Model.h
        Shader.h
        Shader_D3D11.cpp
        Shader_D3D11.h
        InputLayout_D3D11.cpp
        InputLayout_D3D11.h
        PipelineState.h
        PipelineState_D3D11.cpp
        PipelineState_D3D11.h
        Buffer.cpp
)

target_link_libraries(Graphics PRIVATE Gdiplus.lib)
