add_library(Graphics STATIC
        Camera.cpp
        Camera.h
        GfxDevice.h
        GfxDevice_Win32.cpp
        ImguiManager.cpp
        ImguiManager.h
        InputLayout.h
        Plane.cpp
        Plane.h
        Sampler.cpp
        Sampler.h
        Surface.cpp
        Surface.h
        Texture.cpp
        Texture.h
        WndProc.h
        PointLight.cpp
        PointLight.h
        Sphere.cpp
        Sphere.h
        RenderApi.h
        D3D11/RenderApi_D3D11.cpp
        D3D11/RenderApi_D3D11.h
        Renderer.cpp
        Renderer.h
        RenderApi.cpp
        Buffer.h
        D3D11/Buffer_D3D11.cpp
        D3D11/Buffer_D3D11.h
        Mesh.cpp
        Mesh.h
        Material.cpp
        Material.h
        Transform.cpp
        Transform.h
        Model.cpp
        Model.h
        Shader.h
        D3D11/Shader_D3D11.cpp
        D3D11/Shader_D3D11.h
        D3D11/InputLayout_D3D11.cpp
        D3D11/InputLayout_D3D11.h
        PipelineState.h
        D3D11/PipelineState_D3D11.cpp
        D3D11/PipelineState_D3D11.h
        Buffer.cpp
)

target_link_libraries(Graphics PRIVATE Gdiplus.lib)
